# mirumon-telegram-bot

./: .gitignore  Dockerfile  README.md  programs.csv  pyproject.toml  setup.cfg
.github/workflows/: deploy.yml
app/: config.py  main.py
app/resources/: __init__.py
app/resources/const/: strings.py
app/resources/messages/: __init__.py  computers.txt  help.txt  programs.txt
app/resurses/messages/: common.py
app/schemas/: response_models.py
app/services/: excel.py  mirumon_api.py  requests.py  utility.py
scripts/: check-container-version  lint
tests/: test_example.py
