[tool.poetry]
name = "mirumon-tg-bot"
version = "0.1.0"
description = "Telegram bot for mirumon monitoring service"
authors = ["Opti213 <opti213@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.7"
pyTelegramBotAPI = "^3.6"
fastapi = "^0.42.0"
loguru = "^0.3.2"
uvicorn = "^0.9.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
