[tool.poetry]
name = "mirumon-tg-bot"
version = "0.0.3"
description = "Telegram bot for mirumon monitoring service"
authors = ["Opti213 <opti213@mail.ru>"]


[tool.poetry.dependencies]
python = "^3.7"
loguru = "^0.3.2"
uvicorn = "^0.9.0"
pyTelegramBotAPI = "^3.6"
httpx = "^0.7.5"
mako = "^1.1"
python-dotenv = "^0.10.3"
pydantic = "^1.0"
openpyxl = "^3.0"



[tool.poetry.dev-dependencies]
black = { version = "^18.3-alpha.0", allows-prereleases = true}
isort = "^4.3"
autoflake = "^1.3"

mypy = "^0.701.0"
wemake-python-styleguide = "^0.12.4"
flake8-fixme = "^1.1"

pytest = "^5.2"
pytest-asyncio = "^0.10.0"
pytest-cov = "^2.8"


[tool.black]
target_version = ['py36', 'py37', 'py38']
include = '\.pyi?$'
exclude = '''
/(\.git/
  |\.eggs
  |\.hg
  |__pycache__
  |\.cache
  |\.ipynb_checkpoints
  |\.mypy_cache
  |\.pytest_cache
  |\.tox
  |\.venv
  |node_modules
  |_build
  |buck-out
  |build
  |dist
  |media
  |infrastructure
  |templates
  |locale
  |docs
)/
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
